# spur-skills

./: CITATION.cff  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yaml  pypi.yaml  test.yaml
docs/: .pages  how-it-works.md  index.md
skills/spatial-analysis/: SKILL.md
skills/spatial-analysis/references/: becker_boll_voth_2026_practitioners_guide.md  example-python.md  example-r.md  example-stata.md
skills/spur-issues/: SKILL.md
tests/: test_agents.py  test_cli.py  test_integration.py  test_packaged.py  test_sync.py
tool/spur_skills/: __init__.py  agents.py  cli.py  packaged.py  sync.py  types.py
